--- a/index.html
+++ b/index.html
@@ -656,11 +656,59 @@
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title h5" id="rateModalLabel">20. Там. пошлина</h1>
+                        <h1 class="modal-title h5" id="rateModalLabel">27. Акциз</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body small">
-                        
+                    <div class="modal-body">
+                        <div class="small mb-3">Товар попадает под акциз согласно <span class="text-secondary">НК ст. 289</span>. Рассчитать акциз налог?</div>
+                        <div class="form-check mb-3">
+                            <input class="form-check-input" type="radio" name="flexRadioRate" id="flexRadioRate1" checked>
+                            <label class="form-check-label d-flex flex-column" for="flexRadioRate1">
+                                <span>Не рассчитывать</span>
+                            </label>
+                        </div>
+                        <div class="form-check mb-3">
+                            <input class="form-check-input" type="radio" name="flexRadioRate" id="flexRadioRate2">
+                            <label class="form-check-label d-flex flex-column" for="flexRadioRate2">
+                                <span>340 000 сум за 1 т</span>
+                                <span class="small text-secondary">бензин АИ-80 и выше</span>
+                            </label>
+                        </div>
+                        <div class="form-check mb-3">
+                            <input class="form-check-input" type="radio" name="flexRadioRate" id="flexRadioRate3">
+                            <label class="form-check-label d-flex flex-column" for="flexRadioRate3">
+                                <span>303 000 сум за 1 т</span>
+                                <span class="small text-secondary">бензин АИ-91 и выше</span>
+                            </label>
+                        </div>
+                        <div class="form-check mb-3">
+                            <input class="form-check-input" type="radio" name="flexRadioRate" id="flexRadioRate4">
+                            <label class="form-check-label d-flex flex-column" for="flexRadioRate4">
+                                <span>271 000 сум за 1 т</span>
+                                <span class="small text-secondary">Авиакеросин</span>
+                            </label>
+                        </div>
+                        <div class="form-check mb-3">
+                            <input class="form-check-input" type="radio" name="flexRadioRate" id="flexRadioRate5">
+                            <label class="form-check-label d-flex flex-column" for="flexRadioRate5">
+                                <span>326 000 сум за 1 т</span>
+                                <span class="small text-secondary">Дизельное топливо</span>
+                            </label>
+                        </div>
+                        <div class="form-check mb-3">
+                            <input class="form-check-input" type="radio" name="flexRadioRate" id="flexRadioRate6">
+                            <label class="form-check-label d-flex flex-column" for="flexRadioRate6">
+                                <span>293 000 сум за 1 т</span>
+                                <span class="small text-secondary">Дизельное топливо ЭКО</span>
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="flexRadioRate" id="flexRadioRate7">
+                            <label class="form-check-label d-flex flex-column" for="flexRadioRate7">
+                                <span>461 000 сум за 1 т</span>
+                                <span class="small text-secondary">Моторное масло для дизельных или карбюраторных</span>
+                            </label>
+                        </div>
                     </div>
                 </div>
             </div>
