--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                 </form>
                 <ul id="searchList" class="search-list list-unstyled bg-white p-3 mb-0 shadow rounded border position-absolute w-100 d-none" style="top: 38px;">
                     <li class="mb-3 border-bottom pb-3">
-                        <div class="fw-bold mb-1">8703 80 000 1</div>
+                        <div class="mb-1">
+                            <a class="link-dark link-opacity-75-hover text-decoration-none fw-bold" href="#">8703 80 000 1</a>
+                        </div>
                         <div class="small text-secondary d-flex gap-3 mb-1 opacity-50">
                             <div>Раздел XVII</div>
                             <div>Группа 87</div>
@@ -59,7 +61,9 @@
                         </div>
                     </li>
                     <li class="mb-3 border-bottom pb-3">
-                        <div class="fw-bold mb-1">8703 80 000 2</div>
+                        <div class="mb-1">
+                            <a class="link-dark link-opacity-75-hover text-decoration-none fw-bold" href="#">8703 80 000 2</a>
+                        </div>
                         <div class="small text-secondary d-flex gap-3 mb-1 opacity-50">
                             <div>Раздел XVII</div>
                             <div>Группа 87</div>
@@ -69,7 +73,9 @@
                         </div>
                     </li>
                     <li class="mb-3 border-bottom pb-3">
-                        <div class="fw-bold mb-1">8703 80 000 3</div>
+                        <div class="mb-1">
+                            <a class="link-dark link-opacity-75-hover text-decoration-none fw-bold" href="#">8703 80 000 3</a>
+                        </div>
                         <div class="small text-secondary d-flex gap-3 mb-1 opacity-50">
                             <div>Раздел XVII</div>
                             <div>Группа 87</div>
@@ -79,7 +85,9 @@
                         </div>
                     </li>
                     <li class="mb-3 border-bottom pb-3">
-                        <div class="fw-bold mb-1">8703 80 000 4</div>
+                        <div class="mb-1">
+                            <a class="link-dark link-opacity-75-hover text-decoration-none fw-bold" href="#">8703 80 000 4</a>
+                        </div>
                         <div class="small text-secondary d-flex gap-3 mb-1 opacity-50">
                             <div>Раздел XVII</div>
                             <div>Группа 87</div>
@@ -145,7 +153,7 @@
                     <button class="btn-collapse border-0 bg-transparent p-0 d-flex align-items-center justify-content-between w-100 text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseRates" aria-expanded="false" aria-controls="collapseRates">
                         <span class="d-flex align-items-baseline gap-2">
                             <span class="h5 mb-0">Ставки</span>
-                            <span class="bg-primary fw-bold d-flex justify-content-center align-items-center rounded-circle" style="min-width: 24px; min-height: 24px;">5</span>
+                            <span class="bg-primary fw-bold d-flex justify-content-center align-items-center rounded-circle d-none" style="min-width: 24px; min-height: 24px;">5</span>
                         </span>
                         <i class="fa-solid fa-chevron-down"></i>
                     </button>
@@ -494,7 +502,7 @@
                     <div class="mb-5">
                         <div class="mb-1">
                             <span class="fw-bold me-1">8703 80 000 9</span>
-                            <button type="button" class="link-secondary border-0 bg-transparent p-0 border-bottom" style="border-style: dashed !important;">Изменить</button>
+                            <a class="link-secondary text-decoration-none border-bottom" style="border-bottom-style: dashed !important;" href="#">Изменить</a>
                         </div>
                         <div>Единца измерения <span class="fw-bold">шт</span></div>
                     </div>
@@ -560,12 +568,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="small d-flex justify-content-between align-items-baseline">
-                            <div class="fw-bold">Итого</div>
-                            <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
-                            <div>
-                                <span class="fw-bold">0 сум</span>
-                                <button type="button" class="link-secondary border-0 p-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#customsValueModal"><i class="fa-solid fa-circle-question text-secondary"></i></button>
+                        <div class="small">
+                            <div class="d-flex justify-content-between align-items-baseline">
+                                <div>Итого</div>
+                                <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
+                                <div>
+                                    <button type="button" class="link-dark link-opacity-75-hover border-0 p-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#customsValueModal">0 сум <i class="fa-solid fa-circle-question opacity-50"></i></button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -600,44 +609,41 @@
                         </div>
                         <div class="small">
                             <div class="d-flex justify-content-between align-items-baseline mb-3">
-                                <div class="fw-bold">Цена сделки</div>
+                                <div>Цена сделки</div>
                                 <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
-                                <div class="fw-bold">0,00 USD</div>
+                                <div>0,00 USD</div>
                             </div>
                             <div class="d-flex justify-content-between align-items-baseline mb-3">
-                                <div class="fw-bold">10. Там. сбор</div>
+                                <div>10. Там. сбор</div>
                                 <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
-                                <div class="fw-bold">1 БРВ</div>
+                                <div>1 БРВ</div>
                             </div>
                             <div class="d-flex justify-content-between align-items-baseline mb-3">
-                                <div class="fw-bold">20. Там. пошлина</div>
+                                <div>20. Там. пошлина</div>
                                 <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
-                                <div class="fw-bold">
-                                    <span class="fw-bold">60%</span>
-                                    <button type="button" class="link-secondary border-0 p-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#rateModal"><i class="fa-solid fa-pen-to-square text-secondary"></i></button>
+                                <div>
+                                    <button type="button" class="link-dark link-opacity-75-hover border-0 p-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#rateModal">60% <i class="fa-solid fa-pen-to-square opacity-50"></i></button>
                                 </div>
                             </div>
                             <div class="d-flex justify-content-between align-items-baseline mb-3">
-                                <div class="fw-bold">27. Акциз</div>
+                                <div>27. Акциз</div>
                                 <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
-                                <div class="fw-bold">
-                                    <span class="fw-bold">340 000 сум</span>
-                                    <button type="button" class="link-secondary border-0 p-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#rateModal"><i class="fa-solid fa-pen-to-square text-secondary"></i></button>
+                                <div>
+                                    <button type="button" class="link-dark link-opacity-75-hover border-0 p-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#rateModal">340 000 сум <i class="fa-solid fa-pen-to-square opacity-50"></i></button>
                                 </div>
                             </div>
                             <div class="d-flex justify-content-between align-items-baseline mb-3">
-                                <div class="fw-bold">29. НДС</div>
+                                <div>29. НДС</div>
                                 <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
-                                <div class="fw-bold">
-                                    <span class="fw-bold">12%</span>
-                                    <button type="button" class="link-secondary border-0 p-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#rateModal"><i class="fa-solid fa-pen-to-square text-secondary"></i></button>
+                                <div>
+                                    <button type="button" class="link-dark link-opacity-75-hover border-0 p-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#rateModal">12% <i class="fa-solid fa-pen-to-square opacity-50"></i></button>
                                 </div>
                             </div>
                             <div class="d-flex justify-content-between align-items-baseline">
-                                <div class="fw-bold">79. Утил. сбор</div>
+                                <div>79. Утил. сбор</div>
                                 <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
-                                <div class="fw-bold">
-                                    <button type="button" class="link-secondary border-0 p-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#rateModal"><span class="text-danger fw-bold">Выбрать</span></button>
+                                <div>
+                                    <button type="button" class="link-danger fw-bold border-0 p-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#rateModal">Выбрать</button>
                                 </div>
                             </div>
                         </div>
