--- a/index.html
+++ b/index.html
@@ -649,6 +649,64 @@
                         </div>
                     </div>
 
+                    <div class="mb-5">
+                        <div class="small text-danger text-center">
+                            Внимание! Все расчеты носят рекомендательный характер
+                        </div>
+                    </div>
+
+                    <button type="button" class="btn btn-primary w-100 mb-5">Рассчитать</button>
+
+                    <div class="mb-5">
+                        <div class="h6 mb-3"><i class="fa-solid fa-coins text-secondary me-1"></i> Уплаты таможенных платежей</div>
+                        <div class="small">
+                            <div class="d-flex justify-content-between align-items-baseline mb-1">
+                                <div>10. Там. сбор</div>
+                                <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
+                                <div>340 000,00</div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-baseline mb-1">
+                                <div>20. Там. пошлина</div>
+                                <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
+                                <div>0,00</div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-baseline mb-1">
+                                <div>27. Акциз</div>
+                                <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
+                                <div>0,00</div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-baseline mb-1">
+                                <div>29. НДС</div>
+                                <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
+                                <div>3 096 000,00</div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-baseline mb-1">
+                                <div>79. Утил. сбор</div>
+                                <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
+                                <div>30 600 000,00</div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-baseline mb-1">
+                                <div>Там. досмотр (ур.)</div>
+                                <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
+                                <div>85 000,00</div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-baseline mb-1">
+                                <div>Там. досмотр (внеур.)</div>
+                                <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
+                                <div>1 360 000,00</div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-baseline fw-bold">
+                                <div>Итого</div>
+                                <div class="flex-fill border-bottom" style="border-bottom-style: dotted !important;"></div>
+                                <div>35 481 000,00 сум</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-5">
+                        
+                    </div>
+
                 </div>
             </div>
             <!-- КАЛЬКУЛЯТОР КОНЕЦ-->
