--- a/index.html
+++ b/index.html
@@ -703,8 +703,23 @@
                         </div>
                     </div>
 
-                    <div class="mb-5">
-                        
+                    <div class="row">
+                        <div class="col">
+                            <a class="link-secondary text-decoration-none d-flex flex-column gap-2 align-items-center" href="#">
+                                <span class="d-flex align-items-center justify-content-center rounded-circle" style="background-color: #ECEFF1; height: 48px; width: 48px;">
+                                    <i class="fa-solid fa-share-nodes fa-lg"></i>
+                                </span>
+                                <span class="small">Поделиться</span>
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a class="link-secondary text-decoration-none d-flex flex-column gap-2 align-items-center" href="#">
+                                <span class="d-flex align-items-center justify-content-center rounded-circle" style="background-color: #ECEFF1; height: 48px; width: 48px;">
+                                    <i class="fa-solid fa-cloud-arrow-down fa-lg"></i>
+                                </span>
+                                <span class="small">Скачать</span>
+                            </a>
+                        </div>
                     </div>
 
                 </div>
