--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
         <!-- ЭКСПЕРТНЫЙ РЕЖИМ НАЧАЛО -->
         <div id="calcExpert">
             <div class="d-flex position-relative mb-4">
-                <button class="btn btn-primary rounded-end-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTree" aria-controls="offcanvasTree">
+                <button class="btn btn-primary rounded-end-0 p-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTree" aria-controls="offcanvasTree" style="width: 58px;">
                     <i class="fa-solid fa-folder-tree"></i>
                 </button>
                 <form class="flex-fill position-relative" action="#">
-                    <input id="searchInput" type="text" class="form-control border-primary rounded-start-0" placeholder="Введите код ТН ВЭД">
-                    <button class="btn position-absolute top-0 end-0 text-secondary" type="submit">
+                    <input id="searchInput" type="text" class="form-control border-primary rounded-start-0 p-3" placeholder="Введите код ТН ВЭД">
+                    <button class="btn position-absolute top-50 end-0 translate-middle-y text-secondary" type="submit">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                 </form>
-                <ul id="searchList" class="search-list list-unstyled bg-white p-3 mb-0 shadow rounded border position-absolute w-100 d-none" style="top: 38px;">
+                <ul id="searchList" class="search-list list-unstyled bg-white p-3 mb-0 shadow rounded border position-absolute w-100 d-none" style="top: 58px;">
                     <li class="mb-3 border-bottom pb-3">
                         <div class="mb-1">
                             <a class="link-dark link-opacity-75-hover text-decoration-none fw-bold" href="#">8703 80 000 1</a>
@@ -252,7 +252,7 @@
                     </div>
                 </div>
 
-                <button type="button" class="btn btn-primary w-100" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCalc" aria-controls="offcanvasCalc">
+                <button type="button" class="btn btn-primary p-3 w-100" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCalc" aria-controls="offcanvasCalc">
                     <i class="fa-solid fa-calculator"></i> Открыть калькулятор
                 </button>
             </div>
