--- a/index.html
+++ b/index.html
@@ -983,18 +983,22 @@
 
 
 
-                        <div class="multi-graph margin">
-                            JavaScript
-                            <div class="graph" data-name="jQuery" 
-                                 style="--percentage : 75; --fill: #0669AD ;">
-                            </div>
-                            <div class="graph" data-name="Angular" 
-                                 style="--percentage : 50; --fill: #E62A39 ;">
-                            </div>
-                            <div class="graph" data-name="React" 
-                                 style="--percentage : 25; --fill: #FEDA3E ;">
-                            </div>
-                          </div>
+
+                        <div class="meter" style="
+                            --percent-duty: 5;
+                            --percent-fee: 10;
+                            --percent-tax: 15;
+                            --percent-vat: 20;
+                            --percent-disposal: 50;
+                        ">
+                            <div class="meter-duty"></div>
+                            <div class="meter-fee"></div>
+                            <div class="meter-tax"></div>
+                            <div class="meter-vat"></div>
+                            <div class="meter-disposal"></div>
+                        </div>
+
+
 
 
 
